--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
 .gradle
+/.idea
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
-/captures
-.idea/
+app/build
 RemindMe.iml
-app/
-build.gradle
-gradle.properties
-gradle/
-gradlew
-gradlew.bat
-settings.gradle
